Added missing receive shadows checkbox in clouds groupbox

--- a/mandelbulber2/qt/dock_effects.ui
+++ b/mandelbulber2/qt/dock_effects.ui
@@ -83,7 +83,7 @@
       <enum>QTabWidget::West</enum>
      </property>
      <property name="currentIndex">
-      <number>1</number>
+      <number>0</number>
      </property>
      <property name="usesScrollButtons">
       <bool>true</bool>
@@ -1155,9 +1155,9 @@ per pixel:</string>
           <property name="geometry">
            <rect>
             <x>0</x>
-            <y>0</y>
+            <y>-307</y>
             <width>551</width>
-            <height>1644</height>
+            <height>1666</height>
            </rect>
           </property>
           <layout class="QVBoxLayout" name="verticalLayout_35">
@@ -1880,57 +1880,6 @@ Set 100 to keep compatibility with version &lt;=2.12</string>
                   </property>
                  </widget>
                 </item>
-                <item row="2" column="1">
-                 <widget class="MySpinBox" name="spinboxInt_clouds_random_seed">
-                  <property name="sizePolicy">
-                   <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
-                    <horstretch>0</horstretch>
-                    <verstretch>0</verstretch>
-                   </sizepolicy>
-                  </property>
-                  <property name="maximum">
-                   <number>100000</number>
-                  </property>
-                 </widget>
-                </item>
-                <item row="2" column="0">
-                 <widget class="QLabel" name="label_111">
-                  <property name="text">
-                   <string>Random seed:</string>
-                  </property>
-                 </widget>
-                </item>
-                <item row="6" column="0">
-                 <widget class="QLabel" name="label_114">
-                  <property name="text">
-                   <string>Period:</string>
-                  </property>
-                 </widget>
-                </item>
-                <item row="3" column="0" colspan="2">
-                 <widget class="QPushButton" name="pushButton_clouds_randomize">
-                  <property name="text">
-                   <string>Randomize</string>
-                  </property>
-                 </widget>
-                </item>
-                <item row="4" column="0">
-                 <widget class="QLabel" name="label_112">
-                  <property name="text">
-                   <string>Opacity:</string>
-                  </property>
-                 </widget>
-                </item>
-                <item row="6" column="1">
-                 <widget class="MyLineEdit" name="logedit_clouds_period"/>
-                </item>
-                <item row="5" column="0">
-                 <widget class="QLabel" name="label_113">
-                  <property name="text">
-                   <string>Density:</string>
-                  </property>
-                 </widget>
-                </item>
                 <item row="1" column="1">
                  <widget class="MySpinBox" name="spinboxInt_clouds_noise_iterations">
                   <property name="sizePolicy">
@@ -1954,16 +1903,6 @@ Set 100 to keep compatibility with version &lt;=2.12</string>
                   </property>
                  </widget>
                 </item>
-                <item row="0" column="1">
-                 <widget class="MyColorButton" name="colorButton_clouds_color" native="true">
-                  <property name="text" stdset="0">
-                   <string>PushButton</string>
-                  </property>
-                 </widget>
-                </item>
-                <item row="4" column="1">
-                 <widget class="MyLineEdit" name="logedit_clouds_opacity"/>
-                </item>
                 <item row="5" column="1">
                  <widget class="MyDoubleSpinBox" name="spinbox_clouds_density">
                   <property name="sizePolicy">
@@ -1986,6 +1925,36 @@ Set 100 to keep compatibility with version &lt;=2.12</string>
                   </property>
                   <property name="singleStep">
                    <double>0.001000000000000</double>
+                  </property>
+                 </widget>
+                </item>
+                <item row="6" column="0">
+                 <widget class="QLabel" name="label_114">
+                  <property name="text">
+                   <string>Period:</string>
+                  </property>
+                 </widget>
+                </item>
+                <item row="6" column="1">
+                 <widget class="MyLineEdit" name="logedit_clouds_period"/>
+                </item>
+                <item row="5" column="0">
+                 <widget class="QLabel" name="label_113">
+                  <property name="text">
+                   <string>Density:</string>
+                  </property>
+                 </widget>
+                </item>
+                <item row="2" column="1">
+                 <widget class="MySpinBox" name="spinboxInt_clouds_random_seed">
+                  <property name="sizePolicy">
+                   <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
+                    <horstretch>0</horstretch>
+                    <verstretch>0</verstretch>
+                   </sizepolicy>
+                  </property>
+                  <property name="maximum">
+                   <number>100000</number>
                   </property>
                  </widget>
                 </item>
@@ -2014,13 +1983,6 @@ Set 100 to keep compatibility with version &lt;=2.12</string>
                   </property>
                  </widget>
                 </item>
-                <item row="7" column="0">
-                 <widget class="QLabel" name="label_143">
-                  <property name="text">
-                   <string>Ambient light:</string>
-                  </property>
-                 </widget>
-                </item>
                 <item row="8" column="0">
                  <widget class="QLabel" name="label_144">
                   <property name="text">
@@ -2033,6 +1995,57 @@ Set 100 to keep compatibility with version &lt;=2.12</string>
                 </item>
                 <item row="8" column="1">
                  <widget class="MyLineEdit" name="logedit_clouds_lights_boost"/>
+                </item>
+                <item row="0" column="1">
+                 <widget class="MyColorButton" name="colorButton_clouds_color" native="true">
+                  <property name="text" stdset="0">
+                   <string>PushButton</string>
+                  </property>
+                 </widget>
+                </item>
+                <item row="3" column="0" colspan="2">
+                 <widget class="QPushButton" name="pushButton_clouds_randomize">
+                  <property name="text">
+                   <string>Randomize</string>
+                  </property>
+                 </widget>
+                </item>
+                <item row="4" column="0">
+                 <widget class="QLabel" name="label_112">
+                  <property name="text">
+                   <string>Opacity:</string>
+                  </property>
+                 </widget>
+                </item>
+                <item row="2" column="0">
+                 <widget class="QLabel" name="label_111">
+                  <property name="text">
+                   <string>Random seed:</string>
+                  </property>
+                 </widget>
+                </item>
+                <item row="4" column="1">
+                 <widget class="MyLineEdit" name="logedit_clouds_opacity"/>
+                </item>
+                <item row="7" column="0">
+                 <widget class="QLabel" name="label_143">
+                  <property name="text">
+                   <string>Ambient light:</string>
+                  </property>
+                 </widget>
+                </item>
+                <item row="9" column="0" colspan="2">
+                 <widget class="MyCheckBox" name="checkBox_clouds_cast_shadows">
+                  <property name="sizePolicy">
+                   <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
+                    <horstretch>0</horstretch>
+                    <verstretch>0</verstretch>
+                   </sizepolicy>
+                  </property>
+                  <property name="text">
+                   <string>Receive shadows</string>
+                  </property>
+                 </widget>
                 </item>
                </layout>
               </item>
