--- a/mandelbulber2/formula/ui/jos_kleinian_v3.ui
+++ b/mandelbulber2/formula/ui/jos_kleinian_v3.ui
@@ -185,7 +185,7 @@
         <item row="1" column="1">
          <widget class="MySpinBox" name="spinboxInt_transf_int8_Y">
           <property name="enabled">
-           <bool>false</bool>
+           <bool>true</bool>
           </property>
           <property name="sizePolicy">
            <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
@@ -214,7 +214,7 @@
         <item row="2" column="1">
          <widget class="MySpinBox" name="spinboxInt_transf_int8_Z">
           <property name="enabled">
-           <bool>false</bool>
+           <bool>true</bool>
           </property>
           <property name="sizePolicy">
            <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
@@ -2124,12 +2124,12 @@ cosine</string>
    <slot>setEnabled(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>33</x>
-     <y>510</y>
+     <x>41</x>
+     <y>793</y>
     </hint>
     <hint type="destinationlabel">
-     <x>144</x>
-     <y>514</y>
+     <x>177</x>
+     <y>789</y>
     </hint>
    </hints>
   </connection>
@@ -2140,12 +2140,12 @@ cosine</string>
    <slot>setEnabled(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>60</x>
-     <y>511</y>
+     <x>68</x>
+     <y>793</y>
     </hint>
     <hint type="destinationlabel">
-     <x>334</x>
-     <y>513</y>
+     <x>514</x>
+     <y>795</y>
     </hint>
    </hints>
   </connection>
@@ -2156,12 +2156,12 @@ cosine</string>
    <slot>setEnabled(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>21</x>
-     <y>534</y>
+     <x>29</x>
+     <y>821</y>
     </hint>
     <hint type="destinationlabel">
-     <x>143</x>
-     <y>538</y>
+     <x>177</x>
+     <y>817</y>
     </hint>
    </hints>
   </connection>
@@ -2172,12 +2172,12 @@ cosine</string>
    <slot>setEnabled(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>72</x>
-     <y>537</y>
+     <x>80</x>
+     <y>821</y>
     </hint>
     <hint type="destinationlabel">
-     <x>432</x>
-     <y>539</y>
+     <x>612</x>
+     <y>823</y>
     </hint>
    </hints>
   </connection>
@@ -2188,12 +2188,12 @@ cosine</string>
    <slot>setEnabled(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>22</x>
-     <y>565</y>
+     <x>30</x>
+     <y>849</y>
     </hint>
     <hint type="destinationlabel">
-     <x>135</x>
-     <y>569</y>
+     <x>177</x>
+     <y>845</y>
     </hint>
    </hints>
   </connection>
@@ -2204,12 +2204,12 @@ cosine</string>
    <slot>setEnabled(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>46</x>
-     <y>563</y>
+     <x>54</x>
+     <y>849</y>
     </hint>
     <hint type="destinationlabel">
-     <x>313</x>
-     <y>567</y>
+     <x>493</x>
+     <y>851</y>
     </hint>
    </hints>
   </connection>
